--- a/app/design/frontend/default/iphone/template/catalog/product/view/media.phtml
+++ b/app/design/frontend/default/iphone/template/catalog/product/view/media.phtml
@@ -39,7 +39,7 @@
         <ul><!--
             --><li>
                 <?php
-                    $_img = '<a href="'.$this->getGalleryUrl($_image).'"><img src="'.$this->helper('catalog/image')->init($_product, 'image')->resize(290).'" width="145" alt="'.$this->escapeHtml($this->getImageLabel()).'" title="'.$this->escapeHtml($this->getImageLabel()).'" /></a>';
+                    $_img = '<a href="'.$this->getGalleryUrl().'"><img src="'.$this->helper('catalog/image')->init($_product, 'image')->resize(290).'" width="145" alt="'.$this->escapeHtml($this->getImageLabel()).'" title="'.$this->escapeHtml($this->getImageLabel()).'" /></a>';
                     echo $_helper->productAttribute($_product, $_img, 'image');
                 ?>
             </li><!--
