--- a/app/design/frontend/pro/default/template/pbridge/checkout/payment/js.phtml
+++ b/app/design/frontend/pro/default/template/pbridge/checkout/payment/js.phtml
@@ -56,8 +56,12 @@
             var continueButton = buttonsContainer.down('button.button');
             if (target.type != 'checkbox' || ! target.checked) {
                 var checkedRadio = $$('#co-payment-form input[type="radio"][name="payment[method]"]:checked');
-                if (checkedRadio.length && checkedRadio[0].match('[value^="pbridge"]')) {
-                    return continueButton.setStyle({display:'none'});
+                if (checkedRadio.length) {
+                    var iframeContainer = $('payment_form_' + checkedRadio[0].value + '_container');
+                    // check whether it is Bridge payment method
+                    if (iframeContainer.previous('span.pbridge-reload')) {
+                        return continueButton.setStyle({display:'none'});
+                    }
                 }
             }
             continueButton.setStyle({display:'block'});
