Implemented MAGETWO-887: Visual Design Editor Toolbar Panel Styling - toolbar styling - View Options styling

--- a/app/code/core/Mage/DesignEditor/view/frontend/toolbar.phtml
+++ b/app/code/core/Mage/DesignEditor/view/frontend/toolbar.phtml
@@ -20,5 +20,15 @@
 <script type="text/javascript">
 jQuery(document).ready(function () {
     designEditor = new DesignEditor();
+
+    jQuery('.vde_toolbar_cell_title').click(function(){
+        var active = jQuery(this).hasClass('active');
+        jQuery('.vde_toolbar_cell_title').removeClass('active');
+        jQuery('.vde_toolbar_cell_content').hide();
+        if (!active) {
+            jQuery(this).addClass('active');
+            jQuery(this).next('.vde_toolbar_cell_content').show();
+        }
+    });
 });
 </script>
