--- a/app/code/core/Mage/DesignEditor/view/frontend/css/styles.css
+++ b/app/code/core/Mage/DesignEditor/view/frontend/css/styles.css
@@ -12,10 +12,23 @@
     z-index: 999;
     font:11px/1.35 Arial, Helvetica, sans-serif;
     color:#444;
-    background: white;
 }
-#vde_toolbar a.vde_button { border: 1px solid #777777; background: #ffffff; text-decoration: none; padding: 0 7px 1px 7px; text-align: center; }
-#vde_toolbar a.vde_button:hover { background: #eeeeee; }
+#vde_toolbar a.vde_button {
+    display: block;
+    background: url(Mage_DesignEditor::images/button.png) no-repeat;
+    width: 88px;
+    height: 30px;
+    line-height: 30px;
+    text-align: center;
+    vertical-align: middle;
+    float: right;
+    color: #555555;
+    text-decoration: none;
+    margin-top: 2px;
+}
+#vde_toolbar a.vde_button:hover {
+    background: url(Mage_DesignEditor::images/button-hover.png) no-repeat;
+}
 #vde_toolbar .item-msg {
     border-style: solid;
     border-width: 1px;
@@ -81,20 +94,77 @@
     background-color: #F5F5DC;
 }
 
-.vde_toolbar_row {
-    margin-bottom: 5px;
+#vde_toolbar_row {
+    font-size: 10pt;
+    background: url(Mage_DesignEditor::images/toolbar-background.png) repeat-x;
+    position: relative;
+    z-index: 100;
+    height: 36px;
+    margin-bottom: -6px;
 }
-
+#vde_toolbar_row .vde_toolbar_cell {
+    margin: 0 10px;
+    padding: 1px 16px;
+}
 .vde_toolbar_cell {
     float: left;
     padding-left: 10px;
-    padding-right: 10px;
-    border-left: 1px solid black;
+    padding-right: 20px;
+    position: relative;
+    margin: 0 6px;
+}
+.vde_toolbar_cell_title {
+    font-weight: bolder;
+    height: 30px;
+    line-height: 30px;
+    cursor: pointer;
+    padding-right: 16px;
+    background: url(Mage_DesignEditor::images/down-arrow.png) right center no-repeat;
+}
+.vde_toolbar_cell_title.active {
+    background-image: url(Mage_DesignEditor::images/up-arrow.png);
+}
+#vde_toolbar_row .vde_toolbar_cell:hover, .vde_toolbar_cell.active {
+    background-color: #ffffff;
+    border: 1px solid #e8e8e8;
+    padding: 0 15px;
+}
+.vde_toolbar_cell_value {
+    font-weight: normal;
+}
+.vde_toolbar_cell_content {
+    display: none;
+    position: absolute;
+    left: 0;
+    top: 32px;
+    background: #494949;
+    color: #f0efe9;
+    border-radius: 0 0 5px 5px;
+    padding: 5px 0;
+    z-index: 190;
+}
+.vde_toolbar_cell_content > div {
+    white-space: nowrap;
+    line-height: 30px;
+    vertical-align: middle;
+    padding: 0 10px;
+}
+.vde_toolbar_cell_content > div:hover {
+    background: #5a5a5a;
+}
+#vde_toolbar_buttons {
+    float: right;
+    margin-right: 30px;
+    z-index: 1000;
+    position: relative;
 }
 
-#vde_toolbar:after,
-.vde_toolbar_row:after {
-    display:block; content:"."; clear:both; font-size:0; line-height:0; height:0; overflow:hidden;
+#vde_highlighting {
+    padding-left: 20px;
+    cursor: pointer;
+}
+#vde_highlighting.checked {
+    background: url(Mage_DesignEditor::images/checked.png) no-repeat 0 center;
 }
 
 .vde_breadcrumbs {
@@ -102,6 +172,7 @@
     padding: 4pt 0 4pt 10pt;
     text-transform: uppercase;
     font-size: 10pt;
+    background: #ffffff;
 }
 
 .vde_breadcrumbs span {
