--- a/app/code/core/Mage/DesignEditor/view/frontend/toolbar/exit.phtml
+++ b/app/code/core/Mage/DesignEditor/view/frontend/toolbar/exit.phtml
@@ -8,8 +8,8 @@
  * @license     {license_link}
  */
 ?>
-<div>
-    <a href="<?php echo $this->getExitUrl(); ?>" title="<?php echo $this->__('Exit'); ?>" class="vde_button">
-        <?php echo $this->__('Exit'); ?>
+<div id="vde_toolbar_buttons">
+    <a href="<?php echo $this->getExitUrl(); ?>" title="<?php echo $this->__('Quit'); ?>" class="vde_button">
+        <?php echo $this->__('Quit'); ?>
     </a>
 </div>
