--- a/app/code/core/Mage/DesignEditor/view/frontend/toolbar/highlighting.phtml
+++ b/app/code/core/Mage/DesignEditor/view/frontend/toolbar/highlighting.phtml
@@ -8,15 +8,20 @@
  * @license     {license_link}
  */
 ?>
-<div>
-    <input type="checkbox" checked="checked" id="vde_highlighting"/>
-    <label for="vde_highlighting"><?php echo $this->__('Highlight elements'); ?></label>
+<div class="vde_toolbar_cell">
+    <div class="vde_toolbar_cell_title"><?php echo $this->__('View Options'); ?></div>
+    <div class="vde_toolbar_cell_content">
+        <div>
+            <div id="vde_highlighting" class="checked"><?php echo $this->__('Highlight elements'); ?></div>
+        </div>
+    </div>
 </div>
 
 <script type="text/javascript">
-    jQuery(document).ready(function () {
-        jQuery('#vde_highlighting').on('click', null, function (event) {
-            designEditor.highlight(jQuery(this).prop('checked'));
-        });
+jQuery(document).ready(function () {
+    jQuery('#vde_highlighting').click(function(){
+        jQuery(this).toggleClass('checked');
+        designEditor.highlight(jQuery(this).hasClass('checked'));
     });
+});
 </script>
