--- a/app/code/core/Mage/DesignEditor/view/frontend/toolbar/page_types.phtml
+++ b/app/code/core/Mage/DesignEditor/view/frontend/toolbar/page_types.phtml
@@ -14,7 +14,7 @@
 </div>
 <div class="vde_toolbar_cell">
     <div class="vde_toolbar_cell_title">
-        <?php echo $this->__('Page Type'); ?>
+        <?php echo $this->__('Page:'); ?>
         <span class="vde_toolbar_cell_value"><?php echo $this->getSelectedPageType(); ?></span>
     </div>
     <div class="vde_toolbar_cell_content">
