--- a/app/code/core/Mage/DesignEditor/view/frontend/toolbar/skin.phtml
+++ b/app/code/core/Mage/DesignEditor/view/frontend/toolbar/skin.phtml
@@ -11,7 +11,7 @@
 <?php /** @var $this Mage_DesignEditor_Block_Toolbar_Skin */ ?>
 <div class="skin-selector vde_toolbar_cell">
     <div class="vde_toolbar_cell_title">
-        <?php echo Mage::helper('Mage_DesignEditor_Helper_Data')->__('Skin'); ?>
+        <?php echo Mage::helper('Mage_DesignEditor_Helper_Data')->__('Theme:'); ?>
         <span class="vde_toolbar_cell_value"><?php echo Mage::getDesign()->getDesignTheme(); ?></span>
     </div>
     <div class="vde_toolbar_cell_content">
