--- a/app/code/core/Mage/DesignEditor/view/frontend/toolbar/highlighting.phtml
+++ b/app/code/core/Mage/DesignEditor/view/frontend/toolbar/highlighting.phtml
@@ -9,10 +9,10 @@
  */
 ?>
 <div class="vde_toolbar_cell">
-    <div class="vde_toolbar_cell_title"><?php echo $this->__('View Options'); ?></div>
+    <div class="vde_toolbar_cell_title"><?php echo $this->__('View Options:'); ?></div>
     <div class="vde_toolbar_cell_content">
         <div>
-            <div id="vde_highlighting" class="checked"><?php echo $this->__('Highlight elements'); ?></div>
+            <div id="vde_highlighting" class="checked"><?php echo $this->__('Highlight Elements'); ?></div>
         </div>
     </div>
 </div>
