--- a/app/code/core/Mage/DesignEditor/view/frontend/toolbar/highlighting.phtml
+++ b/app/code/core/Mage/DesignEditor/view/frontend/toolbar/highlighting.phtml
@@ -11,9 +11,7 @@
 <div class="vde_toolbar_cell">
     <div class="vde_toolbar_cell_title"><?php echo $this->__('View Options'); ?></div>
     <div class="vde_toolbar_cell_content">
-        <div>
-            <div id="vde_highlighting" class="checked"><?php echo $this->__('Highlight Elements'); ?></div>
-        </div>
+            <div id="vde_highlighting" class="vde_cell_list_item checked"><?php echo $this->__('Highlight Elements'); ?></div>
     </div>
 </div>
 
