--- a/app/code/core/Mage/DesignEditor/view/frontend/toolbar.phtml
+++ b/app/code/core/Mage/DesignEditor/view/frontend/toolbar.phtml
@@ -18,17 +18,18 @@
 </div>
 
 <script type="text/javascript">
-jQuery(document).ready(function () {
-    designEditor = new DesignEditor();
+(function ($) {
+    $(document).ready(function () {
+        designEditor = new DesignEditor();
 
-    jQuery('.vde_toolbar_cell_title').click(function(){
-        var active = jQuery(this).hasClass('active');
-        jQuery('.vde_toolbar_cell_title').removeClass('active');
-        jQuery('.vde_toolbar_cell_content').hide();
-        if (!active) {
-            jQuery(this).addClass('active');
-            jQuery(this).next('.vde_toolbar_cell_content').show();
-        }
+        $('.vde_toolbar_cell_title').click(function(){
+            var cellElement = $(this).parents('.vde_toolbar_cell');
+            var active = cellElement.hasClass('active');
+            $('.vde_toolbar_cell').removeClass('active');
+            if (!active) {
+                cellElement.addClass('active');
+            }
+        });
     });
-});
+})(jQuery);
 </script>
