Added MAGE-6860: 17.04.2012 html5 fixes

--- a/app/design/frontend/default/iphone/template/catalog/layer/view.phtml
+++ b/app/design/frontend/default/iphone/template/catalog/layer/view.phtml
@@ -39,7 +39,7 @@
     <?php endif; ?>
     <div class="block-content">
     <?php if($this->canShowOptions()): ?>
-            <h3><?php echo $this->__('Sort By') ?></h3>
+            <h3><?php echo $this->__('Shop By') ?></h3>
             <?php $_filters = $this->getFilters() ?>
             <?php foreach ($_filters as $_filter): ?>
                 <?php if($_filter->getItemsCount()): ?>
