--- a/app/design/frontend/default/iphone/template/checkout/cart.phtml
+++ b/app/design/frontend/default/iphone/template/checkout/cart.phtml
@@ -32,6 +32,7 @@
  */
 ?>
 <div class="cart">
+    <?php echo $this->getChildHtml('form_before') ?>
     <?php echo $this->getMessagesBlock()->getGroupedHtml() ?>
     <?php if(!$this->hasError() && count($this->getItems()) > 1): ?>
         <ul class="checkout-types">
@@ -43,7 +44,6 @@
         <?php endforeach; ?>
         </ul>
     <?php endif; ?>
-    <?php echo $this->getChildHtml('form_before') ?>
     <form action="<?php echo $this->getUrl('checkout/cart/updatePost') ?>" method="post">
         <fieldset>
             <table id="shopping-cart-table" class="data-table cart-table">
@@ -51,7 +51,7 @@
                     <tr>
                         <td colspan="2" class="a-right">
                             <button type="submit" name="update_cart_action" value="update_qty" title="<?php echo $this->__('Update Shopping Cart'); ?>" class="button btn-update"><?php echo $this->__('Update Shopping Cart'); ?></button>
-                            <button type="submit" name="update_cart_action" value="empty_cart" title="<?php echo $this->__('Clear Shopping Cart'); ?>" class="button btn-update" id="empty_cart_button"><?php echo $this->__('Clear Shopping Cart'); ?></button>
+                            <!--<button type="submit" name="update_cart_action" value="empty_cart" title="<?php echo $this->__('Clear Shopping Cart'); ?>" class="button btn-update" id="empty_cart_button"><?php echo $this->__('Clear Shopping Cart'); ?></button>-->
                         </td>
                     </tr>
                 </tfoot>
