--- a/skin/frontend/enterprise/iphone/css/iphone.css
+++ b/skin/frontend/enterprise/iphone/css/iphone.css
@@ -217,12 +217,13 @@ a.link-edit { background:url(../images/btn_edit.png) no-repeat left; display:inl
 
 .window-overlay { display:none; }
 
+.map-popup,
 .popup-block,
 .remember-me-popup {
     background:#fcfcfc;
     position:absolute;
-    left:15px;
-    right:15px;
+    left:15px !important;
+    right:15px !important;
     margin:-18px 0 0;
     padding:15px;
     -webkit-box-shadow:0 2px 6px rgba(0, 0, 0, .25);
@@ -234,6 +235,9 @@ a.link-edit { background:url(../images/btn_edit.png) no-repeat left; display:inl
 .popup-block .block-title { display:none; }
 .popup-block .buttons-set button { display:inline-block !important; margin-right:1px !important; width:49% !important; }
 .popup-block.active { display:block; }
+
+.map-popup-close { float:right; }
+.map-popup-heading { margin:0 0 10px; }
 
 .remember-me-popup-body { line-height:20px; }
 .remember-me-popup-close {
@@ -1653,6 +1657,8 @@ input[type="checkbox"]:checked {
 .cart .totals,
 .cart .checkout-types { padding:15px; }
 .cart .checkout-types a { font-size:12px; display:block; margin:5px 0 0; padding:5px; text-decoration:underline; }
+.cart .checkout-types li { margin:0 0 10px; }
+.cart .checkout-types li .paypal-or { padding:5px 0; }
 
 .cart .totals table { border-spacing:0; border-collapse:collapse; font-size:13px; width:100%; }
 .cart .totals table th,
@@ -1675,6 +1681,7 @@ input[type="checkbox"]:checked {
 .paypal-review-order .data-table tfoot { background:#eee; }
 .paypal-review-order .data-table th { text-align:left; }
 .paypal-review-order .data-table th { border-bottom:1px solid #eee; padding:5px; }
+.paypal-review-order .data-table th:last-child { text-align:right; }
 .paypal-review-order .data-table td { border-bottom:1px solid #eee; padding:5px; vertical-align:top; }
 
 .checkout-success .sub-title { color:#424242; font-size:18px; line-height:22px; margin:0 0 15px; }
