--- a/app/code/core/Mage/DesignEditor/view/frontend/css/styles.css
+++ b/app/code/core/Mage/DesignEditor/view/frontend/css/styles.css
@@ -25,6 +25,7 @@
     text-transform:uppercase;
     background:white;
 }
+
 #vde_toolbar_row {
     height:2.5em;
     background:#f0efe9;
@@ -48,7 +49,6 @@
     border-right:1pt solid #deddd9 !important;
     border-left:1pt solid #deddd9 !important;
 }
-
 #vde_toolbar_buttons {
     float: right;
     z-index: 1000;
@@ -88,46 +88,57 @@
 }
 
 .vde_element_wrapper {
-    margin-bottom: 1px;
-    padding: 4px;
-    border: 1px solid #4682B4;
+    margin-bottom: 3px;
+    padding: 0px 2px 2px 2px;
+    border: 2px solid #69a8cf;
+    border-radius: 4px;
 }
-
+.vde_element_title {
+    margin: -2px 0px 0px -4px;
+    padding: 0px;
+    border-width: 2px 5px 6px 7px;
+    border-image: url(Mage_DesignEditor::images/block.png) 2 5 6 7 stretch stretch;
+    border-image-outset: fill;
+    -webkit-border-image: url(Mage_DesignEditor::images/block.png) 2 5 6 7 stretch stretch;
+    -moz-border-image: url(Mage_DesignEditor::images/block.png) 2 5 6 7 stretch stretch;
+    color: white;
+    font-size: 8pt;
+    font-weight: bold;
+    max-width: 150px;
+    height: 18px;
+    overflow: hidden;
+    text-align: left;
+    line-height: 17px;
+    cursor: default;
+}
 .vde_element_wrapper.vde_container {
-    padding-bottom: 3px;
-    border: 1px dashed #228B22;
+    border: 2px dashed #7bc361;
 }
 .vde_container > .vde_element_title {
-    background-color: #228B22;
+    border-image: url(Mage_DesignEditor::images/container.png) 2 5 6 7 stretch stretch;
+    -webkit-border-image: url(Mage_DesignEditor::images/container.png) 2 5 6 7 stretch stretch;
+    -moz-border-image: url(Mage_DesignEditor::images/container.png) 2 5 6 7 stretch stretch;
+}
+.vde_element_wrapper.vde_stub {
+    border: 2px solid #92978d;
+}
+.vde_stub > .vde_element_title {
+    border-image: url(Mage_DesignEditor::images/stub.png) 2 5 6 7 stretch stretch;
+    -webkit-border-image: url(Mage_DesignEditor::images/stub.png) 2 5 6 7 stretch stretch;
+    -moz-border-image: url(Mage_DesignEditor::images/stub.png) 2 5 6 7 stretch stretch;
 }
 .vde_element_wrapper.vde_container.vde_draggable {
     border-style: solid;
 }
-.vde_element_title {
-    margin: -4px -4px 4px -4px;
-    padding: 2px;
-    background-color: #4682B4;
-    color: white;
-    font-size: 11px;
-    max-width: 150px;
-    height: 13px;
-    overflow: hidden;
-    text-align: left;
-    line-height: 12px;
-    cursor: default;
-}
-
 .vde_container.vde_container_hover {
     border-color: #006400;
 }
 .vde_container.vde_container_hover > .vde_element_title {
     background-color: #006400;
 }
-
 .vde_placeholder {
     background-color: #F5F5DC;
 }
-
 .vde_toolbar_cell_title {
     font-weight: bold;
     cursor: pointer;
@@ -203,4 +214,7 @@
 }
 #visual_design_editor_skin a:hover {
     text-decoration:underline;
+}
+.ui-sortable-helper {
+    opacity: 0.9;
 }
