--- a/app/code/core/Mage/DesignEditor/view/frontend/stub.phtml
+++ b/app/code/core/Mage/DesignEditor/view/frontend/stub.phtml
@@ -8,9 +8,7 @@
  * @license     {license_link}
  */
 ?>
-<div class="block-stub" style="padding:0 0 .5ex 0;margin:1px 1px 0 1ex;border:1px solid red;">
-<div style="line-height:1em;">
-    <span style="background-color:black;color:white;cursor:pointer;"><?php echo $this->getNameInLayout() ?></span>
-</div>
-<div style="padding-top:.5ex;"><?php echo $this->getChildHtml() ?></div>
+<div class="vde_element_wrapper vde_stub">
+    <div class="vde_element_title"><?php echo $this->getNameInLayout() ?></div>
+    <div><?php echo $this->getChildHtml() ?></div>
 </div>
