--- a/app/code/core/Mage/DesignEditor/view/frontend/css/styles.css
+++ b/app/code/core/Mage/DesignEditor/view/frontend/css/styles.css
@@ -151,14 +151,15 @@
 .vde_toolbar_cell_value {
     font-weight: normal;
 }
+#vde_toolbar_row .vde_toolbar_cell_content, #vde_toolbar_row .vde_toolbar_cell_content * {
+    color:#f0efe9;
+}
 .vde_toolbar_cell_content {
     display: none;
     position: absolute;
     top:2.5em;
     left:0;
     background: #494949;
-    color: #f0efe9;
-
     padding:.5em 0;
     z-index: 190;
     min-width:20em;
@@ -185,8 +186,8 @@
     font-style:italic;
     cursor:default;
 }
-.vde_toolbar_cell_content .vde_cell_list_item:hover {
-    background-color:#5a5a5a;
+.vde_toolbar_cell_content .vde_cell_list_item:hover, #vde_page_types_tree .jstree-clicked, #vde_page_types_tree .jstree-hovered {
+    background-color:#7b7b7b;
 }
 .vde_toolbar_cell_content .checked {
     background:url(../images/checked.png) no-repeat 5pt center;
@@ -208,8 +209,6 @@
 
 #visual_design_editor_skin a {
     display:block;
-    width:100%;
-    color:#f0efe9;
     text-decoration:none;
 }
 #visual_design_editor_skin a:hover {
@@ -217,4 +216,33 @@
 }
 .ui-sortable-helper {
     opacity: 0.9;
+}
+
+#vde_page_types_hierarchy .vde_toolbar_cell_content {
+    padding: 1em .5em 1em 0;
+}
+#vde_page_types_tree {
+    max-height: 30em; /* max allowed height */
+    overflow: hidden; /* don't display native scrollbars */
+    padding-right: 4em; /* make sure custom vertical scrollbar doesn't overlap list items */
+    text-align: left;
+    background-color: transparent;
+}
+
+#vde_page_types_tree a {
+    margin-left: .5em;
+    padding: .5em;
+    width: 100%;
+}
+
+#vde_page_types_tree .jstree-clicked, #vde_page_types_tree .jstree-hovered {
+    border: none;
+}
+
+#vde_page_types_tree .jstree-closed > .jstree-icon {
+    background: url(../images/jstree_plus_minus.png) top left no-repeat;
+}
+
+#vde_page_types_tree .jstree-open > .jstree-icon {
+    background: url(../images/jstree_plus_minus.png) top right no-repeat;
 }
