--- a/app/design/frontend/enterprise/iphone/template/catalog/product/price_msrp.phtml
+++ b/app/design/frontend/enterprise/iphone/template/catalog/product/price_msrp.phtml
@@ -43,4 +43,5 @@
             <?php $_msrpPrice = $this->helper('core')->currency($_product->getMsrp(),true,true) ?>
             <span class="old-price" id="product-price-<?php echo $_product->getId() ?><?php echo $this->getIdSuffix() ?>"><?php echo $_msrpPrice ?></span>
         <?php endif; ?>
+        <?php echo $this->__('Click for price') ?>
     </div>
