--- a/skin/frontend/enterprise/iphone/css/iphone.css
+++ b/skin/frontend/enterprise/iphone/css/iphone.css
@@ -237,7 +237,11 @@ a.link-edit { background:url(../images/btn_edit.png) no-repeat left; display:inl
 .popup-block.active { display:block; }
 
 .map-popup-close { float:right; }
-.map-popup-heading { margin:0 0 10px; }
+.map-popup-heading,
+.map-popup-checkout,
+.map-popup-price { margin:0 0 10px; }
+.map-popup-price .special-price .price-label { color:#222; }
+.map-popup-price .special-price .price { font-weight:bold; }
 
 .remember-me-popup-body { line-height:20px; }
 .remember-me-popup-close {
@@ -1164,7 +1168,7 @@ input[type="checkbox"]:checked {
 .add-to-links .separator { display:none; }
 
 .product-view .options-container-big   .product-options { padding:15px; }
-.product-view .options-container-big   .product-options-bottom { position:relative; padding:0 15px 15px; }
+.product-view .options-container-big   .product-options-bottom { padding:0 15px 15px; }
 .product-view .options-container-small .product-options {}
 .product-view .options-container-small .product-options-bottom .price-box,
 .product-view .options-container-small .product-options-bottom .price-box { display:none; }
@@ -1204,8 +1208,7 @@ input[type="checkbox"]:checked {
 .giftcard-amount-form .notice span:last-child { float:none; }
 
 .product-view .product-options-bottom .required { font-size:10px; line-height:12px; margin:10px 0 0; text-align:right; }
-.product-view .product-options-bottom .price-box { color:#424242; font-size:18px; line-height:24px; font-weight:bold; }
-.product-view .product-options-bottom .price-box .price-label { font-weight:normal; }
+.product-view .product-options-bottom .price-box { color:#424242; font-size:18px; line-height:24px; }
 
 .catalog-product-gallery .buttons-set { padding:10px; }
 .catalog-product-gallery .buttons-set a { text-align:center; }
@@ -1657,7 +1660,7 @@ input[type="checkbox"]:checked {
 .cart .totals,
 .cart .checkout-types { padding:15px; }
 .cart .checkout-types a { font-size:12px; display:block; margin:5px 0 0; padding:5px; text-decoration:underline; }
-.cart .checkout-types li { margin:0 0 10px; }
+.cart .checkout-types li { margin:0 0 10px; text-align:center; }
 .cart .checkout-types li .paypal-or { padding:5px 0; }
 
 .cart .totals table { border-spacing:0; border-collapse:collapse; font-size:13px; width:100%; }
@@ -1666,6 +1669,9 @@ input[type="checkbox"]:checked {
 .cart .totals table .price { white-space:nowrap; }
 .cart .totals table .btn-remove { height:20px; width:20px; vertical-align:bottom; }
 .cart .totals table .btn-remove img { display:none; }
+.cart .totals table .summary-total .summary-collapse { display:inline-block; border-bottom:1px dashed; }
+.cart .totals table .summary-total .summary-collapse:before { content:'+'; display:inline-block; margin-right:5px; }
+.cart .totals table .summary-total.show-details .summary-collapse:before { content:'-'; }
 
 .failed-products { border-bottom:1px solid #eae8ea; margin:10px 0 0; padding:0 0 10px; }
 .failed-products h2 { font-weight:bold; }
@@ -1857,6 +1863,7 @@ ul.disc li { padding-left:10px; background:url(../images/bkg_bulletsm.gif) no-re
 
 /* Common Buttons Design */
 
+.map-popup-checkout button,
 .btn-checkout,
 .account-login button,
 .cart-table tfoot button,
@@ -2009,6 +2016,7 @@ only screen and (min-device-pixel-ratio: 1.5) {
     
     .product-view .product-img-box .product-image:before { background-image:url(../images/i_zoom_retina.png); background-size:14px 14px; }
 
+    .map-popup-checkout button,
     .btn-checkout,
     .account-login button,
     .cart-table tfoot button,
@@ -2108,8 +2116,4 @@ only screen and (min-device-pixel-ratio: 1.5) {
     .opc .order-review .data-table tbody tr:first-child,
     .opc .gift-item .fieldset { background:url(../images/bg_shadow_retina.png) repeat-x 0 0; }
     
-}
-
-@media(orientation:landscape) {
-    .header-bg { background-size:100% 100%; }
 }
